<resources>
    <string name="app_name">FakeArtistNY</string>
    <string name="start">Start!</string>
    <string name="delete_player_player_name">Delete player @{player.name}</string>
    <string name="play">Play!</string>
    <string name="change_player_color">Change player color</string>
    <string name="new_player_hint">New player</string>
    <string name="add_player">Add player</string>
    <string name="start_game">Start game!</string>
    <string name="game_settings">Game settings</string>

    <string name="add_word_help_text">Come up with something for everyone to draw and choose its category. At the end of this phase, one word will be chosen at random.</string>

    <!-- Word Category List -->
    <string-array name="word_categories">
        <item>Objects</item>
        <item>Concepts</item>
        <item>People</item>
    </string-array>

    <!-- Test Strings -->
    <string name="lorem_ipsum">Vel nihil iure saepe voluptas. Non consequatur reiciendis sunt quod sapiente architecto cumque vel. Assumenda veniam impedit qui deleniti totam quia. Aut ut consequuntur dignissimos. Officiis quia amet voluptatem amet illo.</string>
    <string name="reveal_help_text">Tap the card below to reveal what you\'re supposed to draw. If there\'s an X instead of a word, you\'re the Fake Artist!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_header">GAME OPTIONS</string>
    <string name="sub_header_modifiers">Modifiers</string>
    <string name="all_fa_modifier_description">10% chance everyone is a Fake Artist. The player with the most votes wins!</string>
    <string name="all_fa_modifier_title">All Fake Artists</string>
    <string name="no_fa_modifier_description">10% chance there\'s no Fake Artist.</string>
    <string name="no_fa_modifier_title">No Fake Artist</string>
    <string name="random_fa_modifier_title">Random Fake Artists</string>
    <string name="random_fa_modifier_description">10% chance there\'s a random amount of Fake Artists. In this mode, there\'s always more artists than Fake Artists. If a Fake Artist is voted, the whole FA team loses.</string>
    <string name="start_fa_modifier_title">Better Start</string>
    <string name="start_fa_modifier_description">There\'s only a slim chance that the Fake Artist is first.</string>
    <string name="tap_to_reveal_prompt">Tap to reveal</string>
</resources>